<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/already_user"
            android:layout_width="40sp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/login_trans1"
            android:gravity="center"
            android:padding="10dp"
            android:text="LOG IN"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="L"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="O"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="G"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="I"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="N"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/login_trans2"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp">


            <ImageView
                android:layout_width="120sp"
                android:layout_height="150sp"
                android:gravity="center"
                android:padding="10dp"
                android:src="@drawable/logo"
                android:textColor="@color/white_greyish"
                android:textSize="25sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/displayname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/login_trans3"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="First Name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorLitghGray"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10px" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/login_trans3"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="Last Name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorLitghGray"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10px" />

            <EditText
                android:id="@+id/userEmailId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/login_trans3"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorLitghGray"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10px" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/login_trans3"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorLitghGray"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10px" />


            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/login_trans3"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorLitghGray"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10px" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/login_trans3"
                android:drawableLeft="@drawable/confirm_password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorLitghGray"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/terms_conditions"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorLitghGray"
                android:padding="10dp"
                android:text="@string/signUp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>