<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/login_trans1"
            android:padding="10sp">

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120sp"
                    android:layout_height="150sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/logo"
                    android:textColor="@color/white_greyish"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/login_emailid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/login_trans1"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLitghGray"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="10px" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:background="@color/login_trans1"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLitghGray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="8dp">

                    <CheckBox
                        android:id="@+id/show_hide_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_pwd"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="5dp"
                        android:text="@string/forgot"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/loginProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:background="@color/button_selectorcolor"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
            <LinearLayout
                android:layout_width="40sp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/login_trans2"
                android:id="@+id/createAccount"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_layout"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="S"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_layout"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="I"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_layout"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="G"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_layout"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="N"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_layout"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="U"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_layout"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="P"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>


    </LinearLayout>
</RelativeLayout>